# backend/docs/swagger.yaml
@@ -2,6 +2,8 @@ basePath: /
 definitions:
   handler.AddServiceToDraftRequest:
     properties:
+      description:
+        type: string
       price:
         type: number
       service_id:
@@ -10,6 +12,37 @@ definitions:
   handler.CreateDraftOrderRequest:
     properties:
       building_id:
+        type: integer
+    type: object
+  handler.DonationRequest:
+    properties:
+      amount:
+        type: number
+      email:
+        type: string
+      name:
+        type: string
+      order_id:
+        type: integer
+    required:
+    - amount
+    - order_id
+    type: object
+  handler.DonationResponse:
+    properties:
+      amount:
+        type: number
+      creator_email:
+        type: string
+      creator_name:
+        type: string
+      id:
+        type: integer
+      message:
+        type: string
+      order_id:
+        type: integer
+      user_id:
         type: integer
     type: object
   handler.LoginRequest:
@@ -58,6 +91,8 @@ definitions:
     type: object
   handler.UpdateServiceInDraftRequest:
     properties:
+      description:
+        type: string
       price:
         type: number
     type: object
@@ -121,23 +156,23 @@ definitions:
         type: number
       created_at:
         type: string
+      email:
+        type: string
       id:
         type: integer
-      order:
-        $ref: '#/definitions/models.ReconstructionOrder'
+      name:
+        type: string
       order_id:
         type: integer
-      user:
-        $ref: '#/definitions/models.User'
       user_id:
         type: integer
     type: object
   models.OrderService:
     properties:
+      description:
+        type: string
       id:
         type: integer
-      order:
-        $ref: '#/definitions/models.ReconstructionOrder'
       order_id:
         type: integer
       price:
@@ -289,7 +324,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: Заглушка выхода пользователя
+      description: выход пользователя
       produces:
       - application/json
       responses:
@@ -414,11 +449,43 @@ paths:
             additionalProperties:
               type: string
             type: object
-      security:
-      - ApiKeyAuth: []
       summary: Get all categories
       tags:
       - categories
+  /api/donations:
+    post:
+      consumes:
+      - application/json
+      description: Добавляет пожертвование на заявку
+      parameters:
+      - description: Donation data
+        in: body
+        name: donationRequest
+        required: true
+        schema:
+          $ref: '#/definitions/handler.DonationRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/handler.DonationResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Post a donation
+      tags:
+      - donation
   /api/orders:
     get:
       description: список заявок с фильтрацией (доступ ограничен ролями)
@@ -529,9 +596,6 @@ paths:
             additionalProperties:
               type: string
             type: object
-      security:
-      - ApiKeyAuth: []
-      summary: Get order by ID
       tags:
       - orders
     put:
@@ -689,6 +753,57 @@ paths:
       summary: Create draft order
       tags:
       - orders
+  /api/orders/formed:
+    get:
+      description: список заявок с фильтрацией (только заявки formed и connelction
+        started)
+      parameters:
+      - description: Category Id
+        in: query
+        name: categoryId
+        type: integer
+      - description: City Id
+        in: query
+        name: cityId
+        type: integer
+      - description: date from (YYYY-MM-DD)
+        in: query
+        name: from
+        type: string
+      - description: date to (YYYY-MM-DD)
+        in: query
+        name: to
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.ReconstructionOrder'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "403":
+          description: Forbidden
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get donatable orders
+      tags:
+      - base_orders
   /api/orders/services:
     post:
       consumes:
@@ -766,7 +881,7 @@ paths:
         name: service_id
         required: true
         type: integer
-      - description: price
+      - description: price and description
         in: body
         name: UpdateServiceInDraftRequest
         required: true
@@ -978,58 +1093,19 @@ paths:
             type: object
       security:
       - ApiKeyAuth: []
+      - CookieAuth: []
       summary: Get all users
       tags:
       - users
-  /donate/{id}:
-    post:
-      consumes:
-      - application/x-www-form-urlencoded
-      description: Добавляет пожертвование на заявку
-      parameters:
-      - description: Order ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: User ID
-        in: formData
-        name: user_id
-        required: true
-        type: integer
-      - description: Amount or 'other'
-        in: formData
-        name: amount
-        required: true
-        type: string
-      - description: Custom amount if 'other'
-        in: formData
-        name: custom_amount
-        type: string
-      produces:
-      - text/html
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      security:
-      - ApiKeyAuth: []
-      summary: Post a donation
-      tags:
-      - donation
 schemes:
 - http
 securityDefinitions:
   ApiKeyAuth:
     in: header
     name: Authorization
+    type: apiKey
+  CookieAuth:
+    in: cookie
+    name: token
     type: apiKey
 swagger: "2.0"
